[package]
name = "csv-to-plinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
lazy_static = "1.4.0"
log = "0.4.17"
plogger = "0.0.1"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
